--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,7 @@ p {
     margin-bottom: 24px;
     font-family: Gill Sans, SansGuiltMB;
     width: 528px;
+color:#00FF00;
 }
 
 a, a:visited, a:active {
