--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ p.colophon {
 }
 
 h1.no-feature {
-    fcolor:#00FF00;
+    color:#00FF00;
     margin-left:120px;
     font-size:15px;
     line-height:22px;
