--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ p.colophon {
     line-height:22px;
 }
 
-h1.no-feature {
+.no-feature {
     color:#00FF00;
     margin-left:120px;
     font-size:15px;
