--- a/css/style.css
+++ b/css/style.css
@@ -113,8 +113,9 @@ p.colophon {
 .no-feature {
     color:#00FF00;
     margin-left:120px;
-    font-size:15px;
-    line-height:22px;
+    font-size:20px;
+    line-height:26px;
+    font-family: 'Cousine', monospaced;
 }
 
 p.colophon a, p.colophon a:visited, p.colophon a:active {
