--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 html { 
-    font-size: 200px; 
+    font-size: 100%; 
 } 
 
 @font-face {
@@ -73,8 +73,8 @@ a, a:visited, a:active {
 }
 
 .display {
-    font-size: 40px;
-    line-height: 45px;
+    font-size: 200px;
+    line-height: 300px;
 }
 
 .display a {
