--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,7 @@ a, a:visited, a:active {
 .display {
     font-size: 100px;
     line-height: 150px;
+    width:100%;
 }
 
 .display a {
@@ -104,14 +105,14 @@ a, a:visited, a:active {
 /* infos - about */ 
 
 p.colophon {
-    color:#00FF00;
+    color:#0000FF;
     margin-left:120px;
     font-size:15px;
     line-height:22px;
 }
 
 .no-feature {
-    color:#00FF00;
+    color:#0000FF;
     font-size:20px;
     line-height:26px;
     font-family: 'Cousine', monospaced;
