--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,7 @@ p.colophon {
     line-height:17px;
     font-family: 'Cousine', monospaced;
     margin-top:60px;
+    text-transform: uppercase;
 }
 
 p.colophon a, p.colophon a:visited, p.colophon a:active {
