--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ html {
     src: url(http://no-feature.github.com/dauphine/Dauphine%20Regular.otf);
 }
 
+@import url(http://fonts.googleapis.com/css?family=Cousine);
 
 /* styles géneriques communs */ 
 
