h[n] : font-weight: normal !!
Maybe add a reset.css on some point?

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,9 @@ html {
 
 /* styles géneriques communs */ 
 
-
+h1, h2, h3, h4, h5, h6 {
+    font-weight: normal;
+}
 
 h1 {
     font-size: 64px;
