--- a/css/style.css
+++ b/css/style.css
@@ -4,22 +4,22 @@ html {
 
 @font-face {
     font-family: La_roquette;
-    src: url("/french-turtles/La_roquette.otf");
+    src: url("http://no-feature.github.io/french-turtles/La_roquette.otf");
 }
 
 @font-face {
     font-family: franklin;
-    src: url("/french-turtles/franklin.otf");
+    src: url("http://no-feature.github.io/french-turtles/franklin.otf");
 }
 
 @font-face {
     font-family: twosteps;
-    src: url("/french-turtles/2steps.otf");
+    src: url("http://no-feature.github.io/french-turtles/2steps.otf");
 }
 
 @font-face {
     font-family: "Dauphine";
-    src: url("/Dauphine%20Regular.otf");
+    src: url("http://no-feature.github.io/Dauphine%20Regular.otf");
 }
 
 @font-face {
