--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ html {
 
 @font-face {
     font-family: "Dauphine";
-    src: url("http://no-feature.github.io/Dauphine%20Regular.otf");
+    src: url("http://no-feature.github.io/dauphine/Dauphine%20Regular.otf");
 }
 
 @font-face {
